@@ -13,18 +13,21 @@ import sast.evento.annotation.DefaultActionState;
 import sast.evento.annotation.OperateLog;
 import sast.evento.common.enums.ActionState;
 import sast.evento.common.enums.ErrorEnum;
-import sast.evento.config.ActionRegister;
 import sast.evento.entitiy.Event;
+import sast.evento.entitiy.Permission;
 import sast.evento.exception.LocalRunTimeException;
 import sast.evento.interceptor.HttpInterceptor;
 import sast.evento.mapper.EventMapper;
+import sast.evento.mapper.PermissionMapper;
 import sast.evento.model.Action;
 import sast.evento.model.UserModel;
 import sast.evento.service.PermissionService;
 import sast.sastlink.sdk.service.SastLinkService;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
 
 @RestController
 @ConditionalOnProperty(prefix = "test", name = "challenge")
@@ -39,6 +42,8 @@ public class TestController {
     private SastLinkService sastLinkService;
     @Resource
     private PermissionService permissionService;
+    @Resource
+    private PermissionMapper permissionMapper;
     @Resource
     private EventMapper eventMapper;
 
@@ -66,52 +71,39 @@ public class TestController {
     public String permission(@RequestParam ActionState type,
                              @RequestParam(required = false) Integer eventId,
                              @RequestParam(required = false) List<String> permission) {
-        //异常丑陋的代码，随他去吧，反正是测试用的（
         UserModel userModel = HttpInterceptor.userHolder.get();
-        final List<String> adminPermission = ActionRegister.actionName2action.values().stream()
-                .filter(a -> a.getActionState().equals(ActionState.ADMIN))
-                .map(Action::getMethodName).toList();
-        final List<String> managerPermission = ActionRegister.actionName2action.values().stream()
-                .filter(a -> a.getActionState().equals(ActionState.MANAGER))
-                .map(Action::getMethodName).toList();
-        if(!permissionService.getUserAdminPermissions(userModel.getId()).isEmpty()){
-            switch (type) {
-                case ADMIN ->{
-                    List<String> addedPermission = permission.isEmpty()?adminPermission:permission;
+        switch (type) {
+            case ADMIN -> {
+                List<String> adminPermission = permissionService.getAllAdminPermissions().stream().map(Action::getMethodName).collect(Collectors.toList());
+                List<String> addedPermission = permission.isEmpty() ? adminPermission : permission;
+                if (!permissionMapper.exists(Wrappers.lambdaQuery(Permission.class)
+                        .eq(Permission::getUserId, userModel.getId())
+                        .and(wrapper -> wrapper.eq(Permission::getEventId, 0)))) {
                     permissionService.addAdmin(addedPermission, userModel.getId());
-                }
-                case MANAGER -> {
-                    if (eventMapper.exists(Wrappers.lambdaQuery(Event.class).eq(Event::getId, eventId))) {
-                        List<String> addedPermission = permission.isEmpty()?managerPermission:permission;
-                        permissionService.addManager(eventId, addedPermission, userModel.getId());
-                    } else {
-                        return "no such event";
-                    }
-                }
-                default -> {
-                    return "error type";
-                }
-            }
-            return "ok";
-        }else {
-            switch (type) {
-                case ADMIN ->{
-                    List<String> addedPermission = permission.isEmpty()?adminPermission:permission;
+                } else {
                     permissionService.updateAdminPermission(addedPermission, userModel.getId());
                 }
-                case MANAGER -> {
-                    if (eventMapper.exists(Wrappers.lambdaQuery(Event.class).eq(Event::getId, eventId))) {
-                        List<String> addedPermission = permission.isEmpty()?managerPermission:permission;
-                        permissionService.updateManagerPermission(eventId, addedPermission, userModel.getId());
+            }
+            case MANAGER -> {
+                List<String> managerPermission = permissionService.getAllManagerPermissions().stream().map(Action::getMethodName).collect(Collectors.toList());
+                if (eventMapper.exists(Wrappers.lambdaQuery(Event.class).eq(Event::getId, eventId))) {
+                    List<String> addedPermission = permission.isEmpty() ? managerPermission : permission;
+                    if (!permissionMapper.exists(Wrappers.lambdaQuery(Permission.class)
+                            .eq(Permission::getUserId, userModel.getId())
+                            .and(wrapper -> wrapper.eq(Permission::getEventId, eventId)))) {
+                        permissionService.addManager(eventId, addedPermission, userModel.getId());
                     } else {
-                        return "no such event";
+                        permissionService.updateManagerPermission(eventId, addedPermission, userModel.getId());
                     }
-                }
-                default -> {
-                    return "error type";
+                } else {
+                    return "no such event";
                 }
             }
-            return "ok";
+            default -> {
+                return "error type";
+            }
         }
+        return "ok";
     }
+
 }
